[package]
authors = ["Kevin King <kevin@krypt.co>"]
name = "libsigchain"
version = "0.1.0"

[lib]
crate-type = ["staticlib"]
name = "sigchain"

[build-dependencies]

[build-dependencies.rusty-cheddar]
git = "https://gitlab.com/rusty-binder/rusty-cheddar.git"

[dependencies]
error-chain = "0.11.0"
serde_json = "1.0.9"
open = "1.2.1"
url = "1.6.0"
colored = "1.5.2"
itertools = "0.7.6"

[dependencies.dashboard_middleware]
path = "../dashboard_middleware"

[dependencies.sigchain_client]
path = "../sigchain_client"

[dependencies.sigchain_core]
path = "../sigchain_core"
